Remove broken links

--- a/test/storybook/docs/Testing/Behavior/Extends/Composition-vs-Inheritance.mdx
+++ b/test/storybook/docs/Testing/Behavior/Extends/Composition-vs-Inheritance.mdx
@@ -8,8 +8,8 @@ This document compares inheritance-based and composition-based patterns at scale
 
 ## Test Cases
 
-- **Test Case #18**: [Inheritance-Based Scaling](./?path=/story/testing-behavior-extends-inheritance-scaling--page) - 3 components, 2 controllers via inheritance
-- **Test Case #19**: [Composition-Based Scaling](./?path=/story/testing-behavior-extends-composition-scaling--page) - 3 components, 2 controllers via composition
+- **Test Case #18**: Inheritance-Based Scaling - 3 components, 2 controllers via inheritance
+- **Test Case #19**: Composition-Based Scaling - 3 components, 2 controllers via composition
 
 ## Overview
 
