--- a/test/storybook/docs/Testing/Coverage-Report.mdx
+++ b/test/storybook/docs/Testing/Coverage-Report.mdx
@@ -16,6 +16,17 @@ import React from 'react';
 This page provides a high-level overview of test coverage across all Stencil decorators and behavior testing. Click on any card to view detailed test coverage matrices and implementation status.
 
 export const CoverageSummary = () => {
+  // Get timestamp from extendsData (last one that runs) or any other test-coverage.json
+  // Check extendsData first since it's the last one that runs in test-coverage script
+  const timestampData = extendsData.lastRunFormatted || 
+    methodData.lastRunFormatted || 
+    listenData.lastRunFormatted || 
+    eventData.lastRunFormatted || 
+    stateData.lastRunFormatted || 
+    propData.lastRunFormatted || 
+    componentTestData.lastRunFormatted || 
+    null;
+
   // Helper function to get test case stats for decorators with testCaseStatus
   const getTestCaseStats = (data) => {
     if (!data.testCaseStatus) return null;
@@ -88,26 +99,26 @@ export const CoverageSummary = () => {
       </div>
       
       <div style={{
-        background: '#f0fdf4',
+        background: '#fff',
         padding: '24px',
         borderRadius: '8px',
-        border: '2px solid #86efac',
+        border: '2px solid #e5e7eb',
         boxShadow: '0 1px 3px rgba(0,0,0,0.1)'
       }}>
         <div style={{
           fontSize: '13px',
           fontWeight: '600',
-          color: '#15803d',
+          color: '#6b7280',
           textTransform: 'uppercase',
           letterSpacing: '0.5px',
           marginBottom: '8px'
         }}>
-          Total Tests Passing
+          Total Tests
         </div>
         <div style={{
           fontSize: '36px',
           fontWeight: '700',
-          color: '#16a34a',
+          color: '#111827',
           lineHeight: '1',
           marginBottom: '6px'
         }}>
@@ -115,9 +126,12 @@ export const CoverageSummary = () => {
         </div>
         <div style={{
           fontSize: '13px',
-          color: '#15803d'
+          color: '#6b7280',
+          borderTop: '1px solid #e5e7eb',
+          paddingTop: '8px',
+          marginTop: '8px'
         }}>
-          All tests passing ✓
+          📅 Last run: {timestampData || 'Never'}
         </div>
       </div>
     </div>
@@ -282,7 +296,7 @@ export const DecoratorCards = () => {
                   color: '#6b7280',
                   marginTop: '4px'
                 }}>
-                  {decorator.testStats.totalTests} tests passing
+                  {decorator.testStats.totalTests} tests
                 </div>
               )}
             </div>
